# neoware

./: CMakeLists.txt  android_native_app_glue.h  basic_math.hpp  basic_sdk.cpp  basic_sdk.hpp  gui.cpp  gui.hpp  ida_defs.h  main.cpp  makez.bat  memory_mgr.hpp  post_render.cpp  post_render.hpp  settings.cpp  settings.hpp  shoot_inner.cpp  shoot_inner.hpp  swappy.cpp  swappy.hpp
fonts/: icons.h  iconslogs.h  intermedium.h  lexenddeca.h
images/: logo.h
imgui/: imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
kitty_memory/: MemoryPatch.cpp  MemoryPatch.hpp
